<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">


    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical|center"
               android:src="@drawable/vic_logo"
               android:contentDescription="@string/vic_studio_logo"
               android:layout_marginTop="5dp"
               android:layout_marginBottom="5dp"
               android:layout_marginLeft="5dp"
               android:layout_marginRight="5dp"/>


    <TextView android:id="@+id/about_text"
              android:textSize="12sp"
              android:layout_gravity="center_vertical|right"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/dialog_about_text"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"/>

    <TextView android:id="@+id/about_text_credits"
              android:textSize="12sp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/about_us_credits"
              android:layout_gravity="center"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="120dp"
                  android:orientation="vertical"

                  android:layout_gravity="center_horizontal">
        <ScrollView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"

                >

            <LinearLayout  android:orientation="vertical"
                           android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center_horizontal">
                <TextView

                        android:id="@+id/about_text_members"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"

                        android:text="@string/dialog_about_text_members"
                        />

                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/dt_wo_bg"
                           android:contentDescription="@string/dream_team_logo"
                           android:layout_marginTop="10dp"
                           android:layout_marginBottom="20dp"
                           android:layout_marginRight="5dp"
                           android:layout_gravity="center"
                        />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>