<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:focusableInTouchMode="true"
              android:focusable="true">

    <EditText
            android:id="@+id/edit_camera_name"
            android:hint="@string/dialog_add_camera_camera_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:imeOptions="flagNoExtractUi"
            android:singleLine="true"

            />

    <EditText
            android:id="@+id/edit_camera_ip"
            android:hint="@string/dialog_add_camera_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:imeOptions="flagNoExtractUi"
            android:singleLine="true"
            android:inputType="number"

            />

    <EditText
            android:id="@+id/edit_camera_port"
            android:hint="@string/dialog_add_camera_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:imeOptions="flagNoExtractUi"
            android:inputType="number"
            android:singleLine="true"
            />

</LinearLayout>